--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                         <a href="movies.html">영화</a>
                         <a href="#">영화관</a>
                         <a href="event.html">이벤트</a>
-                        <a href="#">스토어</a>
+                        <a href="store.html">스토어</a>
                     </nav>
                     <ul class="tnb_left cf">
-                        <li><a href="#">로그인</a></li>
+                        <li><a href="login.html">로그인</a></li>
                         <li><a href="#">회원가입</a></li>
                     </ul>
                     <ul class="tnb_right cf">
@@ -49,7 +49,7 @@
         <main id="main">
             <div class="section_container">
                 <section class="movies">
-                    <h2 class="cf">상영중 <a href="movies.html">더보기<i class="fas fa-long-arrow-alt-right"></i></a></h2>
+                    <h2 class="cf">박스오피스 <a href="movies.html">더보기<i class="fas fa-long-arrow-alt-right"></i></a></h2>
                     <div class="slider_area">
                         <div class="slider_view">
                             <ul class="slider_wrap cf">
@@ -156,7 +156,7 @@
             </div>
             <div class="section_container">
                 <section class="store">
-                    <h2 class="cf">스토어 <a href="#">더보기<i class="fas fa-long-arrow-alt-right"></i></a></h2>
+                    <h2 class="cf">스토어 <a href="store.html">더보기<i class="fas fa-long-arrow-alt-right"></i></a></h2>
                     <ul class="cf">
                         <li><a href="#"><img src="src/img/store/s1.jpg" alt="스토어1"></a></li>
                         <li><a href="#"><img src="src/img/store/s2.jpg" alt="스토어2"></a></li>
