--- a/movies.html
+++ b/movies.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
     <link rel="stylesheet" href="css/movies.css">
     <script src="js/header_mobile.js" defer></script>
-    <script type="module" src="js/movies_categoryBtnHandler.js" defer></script>
+    <script type="module" src="js/categoryBtnHandler.js" defer></script>
     <script type="module" src="js/movies_dateCount.js" defer></script>
 </head>
 
@@ -27,10 +27,10 @@
                         <a href="movies.html">영화</a>
                         <a href="#">영화관</a>
                         <a href="event.html">이벤트</a>
-                        <a href="#">스토어</a>
+                        <a href="store.html">스토어</a>
                     </nav>
                     <ul class="tnb_left cf">
-                        <li><a href="#">로그인</a></li>
+                        <li><a href="login.html">로그인</a></li>
                         <li><a href="#">회원가입</a></li>
                     </ul>
                     <ul class="tnb_right cf">
