--- a/thearter.html
+++ b/thearter.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>CGV | 이벤트</title>
+    <title>CGV | 영화관</title>
     <link rel="icon" sizes="16x16" type="image/png" href="src/img/favicon.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/event.css">
+    <link rel="stylesheet" href="css/thearter.css">
     <script src="js/header_mobile.js" defer></script>
-    <script type="module" src="js/categoryBtnHandler.js" defer></script>
+    <!--    <script type="module" src="js/categoryBtnHandler.js" defer></script>-->
 </head>
 
 <body>
@@ -24,13 +25,13 @@
                     <nav class="gnb cf">
                         <a href="#">예매</a>
                         <a href="movies.html">영화</a>
-                        <a href="#">영화관</a>
+                        <a href="thearter.html">영화관</a>
                         <a href="event.html">이벤트</a>
                         <a href="store.html">스토어</a>
                     </nav>
                     <ul class="tnb_left cf">
                         <li><a href="login.html">로그인</a></li>
-                        <li><a href="#">회원가입</a></li>
+                        <li><a href="join.html">회원가입</a></li>
                     </ul>
                     <ul class="tnb_right cf">
                         <li><a href="https://www.facebook.com/CJCGV" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
@@ -43,12 +44,52 @@
         </header>
         <main id="main">
             <section>
-                <h2>EVENT</h2>
-                <div class="categoryBtns cf">
-                    <button id="event_special" class="on">스페셜</button>
-                    <button id="event_movie">영화</button>
-                    <button id="event_membership">멤버십</button>
-                    <button id="event_alliance">제휴</button>
+                <h2>영화관</h2>
+                <div class="thearterlistContainner">
+                    <div class="categoryBtns cf">
+                        <button id="" class="on">서울</button>
+                        <button id="">경기</button>
+                        <button id="">인천</button>
+                        <button id="">강원</button>
+                        <button id="">대전/충청</button>
+                        <button id="">대구</button>
+                        <button id="">부산/울산</button>
+                        <button id="">경상</button>
+                        <button id="">광주/전라/제주</button>
+                    </div>
+                    <ul class="thearterList">
+                        <li><button>CAR CINEMA</button></li>
+                        <li><button>CGV강남</button></li>
+                        <li><button>CGV강변</button></li>
+                        <li><button>CGV건대입구</button></li>
+                        <li><button>CGV구로</button></li>
+                        <li><button>CGV대학로</button></li>
+                        <li><button>CGV동대문</button></li>
+                        <li><button>CGV등촌</button></li>
+                        <li><button>CGV명동</button></li>
+                        <li><button>CGV명동역 씨네라이브러리</button></li>
+                        <li><button>CGV목동</button></li>
+                        <li><button>CGV미아</button></li>
+                        <li><button>CGV불광</button></li>
+                        <li><button>CGV상봉</button></li>
+                        <li><button>CGV성신여대입구</button></li>
+                        <li><button>CGV송파</button></li>
+                        <li><button>CGV수유</button></li>
+                        <li><button>CGV신촌아트레온</button></li>
+                        <li><button>CGV압구정</button></li>
+                        <li><button>CGV여의도</button></li>
+                        <li><button>CGV영등포</button></li>
+                        <li><button>CGV왕십리</button></li>
+                        <li><button>CGV용산아이파크몰</button></li>
+                        <li><button>CGV중계</button></li>
+                        <li><button>CGV천호</button></li>
+                        <li><button>CGV청담씨네시티</button></li>
+                        <li><button>CGV피카디리1958</button></li>
+                        <li><button>CGV하계</button></li>
+                        <li><button>CGV홍대</button></li>
+                        <li><button>CINE de CHEF 압구정</button></li>
+                        <li><button>CINE de CHEF 용산아이파크몰</button></li>
+                    </ul>
                 </div>
                 <div class="content">
                     <ul class="contentListContainer eventListContainer cf">
@@ -91,4 +132,6 @@
             </div>
         </footer>
     </div>
-</body></html>
+</body>
+
+</html>
