--- a/login.html
+++ b/login.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>CGV | 이벤트</title>
+    <title>CGV | 로그인</title>
     <link rel="icon" sizes="16x16" type="image/png" href="src/img/favicon.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/event.css">
+    <link rel="stylesheet" href="css/login.css">
     <script src="js/header_mobile.js" defer></script>
-    <script type="module" src="js/categoryBtnHandler.js" defer></script>
 </head>
 
 <body>
@@ -43,17 +42,24 @@
         </header>
         <main id="main">
             <section>
-                <h2>EVENT</h2>
-                <div class="categoryBtns cf">
-                    <button id="event_special" class="on">스페셜</button>
-                    <button id="event_movie">영화</button>
-                    <button id="event_membership">멤버십</button>
-                    <button id="event_alliance">제휴</button>
-                </div>
+                <h2>로그인</h2>
                 <div class="content">
-                    <ul class="contentListContainer eventListContainer cf">
-
-                    </ul>
+                    <form method="post" action="#" name="loginForm" id="loginForm">
+                        <fieldset>
+                            <legend class="hidden">로그인</legend>
+                            <input type="text" id="id" name="id" required placeholder="아이디를 입력하세요">
+                            <input type="password" id="password" name="password" required placeholder="비밀번호를 입력하세요">
+                            <input type="submit" id="submit" name="submit" value="로그인">
+                            <p class="cf">
+                                <span><a href="#">아이디 찾기</a> / <a href="#">비밀번호 찾기</a></span>
+                                <a href="#">회원가입</a>
+                            </p>
+                            <span class="bars barTop"></span>
+                            <span class="bars barRight"></span>
+                            <span class="bars barBottom"></span>
+                            <span class="bars barLeft"></span>
+                        </fieldset>
+                    </form>
                 </div>
             </section>
         </main>
