--- a/ticketing.html
+++ b/ticketing.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>CGV | 이벤트</title>
+    <title>CGV | 예매</title>
     <link rel="icon" sizes="16x16" type="image/png" href="src/img/favicon.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/event.css">
+    <link rel="stylesheet" href="css/ticketing.css">
     <script src="js/header_mobile.js" defer></script>
-    <script type="module" src="js/categoryBtnHandler.js" defer></script>
+<!--    <script type="module" src="js/movies_categoryBtnHandler.js" defer></script>-->
+<!--    <script type="module" src="js/movies_dateCount.js" defer></script>-->
 </head>
 
 <body>
@@ -26,7 +27,7 @@
                         <a href="movies.html">영화</a>
                         <a href="#">영화관</a>
                         <a href="event.html">이벤트</a>
-                        <a href="store.html">스토어</a>
+                        <a href="#">스토어</a>
                     </nav>
                     <ul class="tnb_left cf">
                         <li><a href="login.html">로그인</a></li>
@@ -43,17 +44,26 @@
         </header>
         <main id="main">
             <section>
-                <h2>EVENT</h2>
-                <div class="categoryBtns cf">
-                    <button id="event_special" class="on">스페셜</button>
-                    <button id="event_movie">영화</button>
-                    <button id="event_membership">멤버십</button>
-                    <button id="event_alliance">제휴</button>
-                </div>
-                <div class="content">
-                    <ul class="contentListContainer eventListContainer cf">
-
-                    </ul>
+                <h2>예매하기</h2>
+                <div class="content cf">
+                    <article class="movies">
+                        <h3>영화 선택</h3>
+                        <ul>
+                            <li>다만 악에서 구하소서</li>
+                        </ul>
+                    </article>
+                    <article class="thearter">
+                        <h3>영화관 선택</h3>
+                        <ul>
+                            <li>다만 악에서 구하소서</li>
+                        </ul>
+                    </article>
+                    <article class="날짜 선택">
+                        <h3>영화선택</h3>
+                        <ul>
+                            <li>다만 악에서 구하소서</li>
+                        </ul>
+                    </article>
                 </div>
             </section>
         </main>
