--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
                     <nav class="gnb cf">
                         <a href="#">예매</a>
                         <a href="movies.html">영화</a>
-                        <a href="#">영화관</a>
+                        <a href="thearter.html">영화관</a>
                         <a href="event.html">이벤트</a>
                         <a href="store.html">스토어</a>
                     </nav>
@@ -51,8 +51,8 @@
                             <input type="password" id="password" name="password" required placeholder="비밀번호를 입력하세요">
                             <input type="submit" id="submit" name="submit" value="로그인">
                             <p class="cf">
-                                <span><a href="findID.html">아이디 찾기</a> / <a href="findPassword.html">비밀번호 찾기</a></span>
-                                <a href="join.html">회원가입</a>
+                                <span><a href="#">아이디 찾기</a> / <a href="#">비밀번호 찾기</a></span>
+                                <a href="#">회원가입</a>
                             </p>
                             <span class="bars barTop"></span>
                             <span class="bars barRight"></span>
