--- a/findPassword.html
+++ b/findPassword.html
@@ -23,7 +23,7 @@
                     <nav class="gnb cf">
                         <a href="#">예매</a>
                         <a href="movies.html">영화</a>
-                        <a href="#">영화관</a>
+                        <a href="thearter.html">영화관</a>
                         <a href="event.html">이벤트</a>
                         <a href="store.html">스토어</a>
                     </nav>
