--- a/store.html
+++ b/store.html
@@ -25,9 +25,9 @@
                     <nav class="gnb cf">
                         <a href="#">예매</a>
                         <a href="movies.html">영화</a>
-                        <a href="#">영화관</a>
+                        <a href="thearter.html">영화관</a>
                         <a href="event.html">이벤트</a>
-                        <a href="#">스토어</a>
+                        <a href="store.html">스토어</a>
                     </nav>
                     <ul class="tnb_left cf">
                         <li><a href="login.html">로그인</a></li>
