--- a/thearter.html
+++ b/thearter.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/thearter.css">
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=cb6c2a86255a996cce821166f4d1a4d9&libraries=services"></script>
     <script src="js/header_mobile.js" defer></script>
-    <script type="module" src="js/categoryBtnHandler.js" defer></script>
+    <script type="module" src="js/theater_categoryBtnHandler.js" defer></script>
     <script type="module" src="js/theater_btnHandler.js" defer></script>
     <script type="module" src="js/thearterMap.js" defer></script>
     <script type="module" src="js/theaterObject.js" defer></script>
